src/tests/files/iptables-save_with-mangle.txt
# Generated by iptables-save v1.6.1 on Wed Apr 11 13:28:30 2018
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OPENVPN_BERTO - [0:0]
-A POSTROUTING -j OPENVPN_BERTO
-A OPENVPN_BERTO -o tun0 -j DROP
COMMIT
# Completed on Wed Apr 11 13:28:30 2018
# Generated by iptables-save v1.6.1 on Wed Apr 11 13:28:30 2018
*nat
:PREROUTING ACCEPT [13049:548540]
:INPUT ACCEPT [13036:547708]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER_OUTPUT - [0:0]
:DOCKER_POSTROUTING - [0:0]
-A OUTPUT -d 127.0.0.11/32 -j DOCKER_OUTPUT
-A POSTROUTING -d 127.0.0.11/32 -j DOCKER_POSTROUTING
-A POSTROUTING -s 192.168.255.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 192.168.254.0/24 -o eth0 -j MASQUERADE
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 127.0.0.11:40828
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p udp -m udp --dport 53 -j DNAT --to-destination 127.0.0.11:45601
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p tcp -m tcp --sport 40828 -j SNAT --to-source :53
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p udp -m udp --sport 45601 -j SNAT --to-source :53
COMMIT
# Completed on Wed Apr 11 13:28:30 2018
# Generated by iptables-save v1.6.1 on Wed Apr 11 13:28:30 2018
*filter
:INPUT ACCEPT [163:25927]
:FORWARD ACCEPT [254:33482]
:OUTPUT ACCEPT [83:15948]
COMMIT
# Completed on Wed Apr 11 13:28:30 2018
